--- a/.github/test/Ⓜ❼ .md
+++ b/.github/test/Ⓜ❼ .md
@@ -1,25 +1,14 @@
-Ⓜ❼                                                    14:57
+| Ⓜ❼           | 1er train | 2ème train | 14:57 |
+|--------------|-----------|------------|-------|
+| La Courneuve | 1         | 6          | mins  |
 
-                       1er train     2ème train
-                       
-La Courneuve            1             6                 min
+| Ⓜ❼    ㅤㅤ    | 1er train | 2ème train | 14:57 |
+|---------------|-----------|------------|-------|
+| Ivry     ㅤㅤ | 4         | 9          | mins  |
+| Villejuifㅤㅤㅤ | 13        | 26         | mins  |
 
-
-
-Ⓜ❼                                                    14:57
-
-                        1er train     2ème train
-                        
-Ivry                    4                9               min
-
-Villejuif                13              26              min
-
-
-Prochain Trains (en minutes) :
-
-Ivry: 15, 19, 23, 29, 31, 37, 45, 53, 1h07, 1h11
-
-Villejuif: 36, 38, 41, 51, 1h03, 1h15, 1h23, 1h31, 1h39, 1h42
-
-La Courneuve: 11, 16, 21, 26, 31, 36, 41, 46, 51, 56
-
+| Prochain trains pour: | dans (en minutes)                                              |
+|-----------------------|----------------------------------------------------|
+| Ivry                  | 15, 19, 23, 29, 31, 37, 45, 53, 1h07, 1h11         |
+| Villejuif             | 36, 38, 41, 51, 1h03, 1h15, 1h23, 1h31, 1h39, 1h42 |
+| La Courneuve          | 11, 16, 21, 26, 31, 36, 41, 46, 51, 56             |
