--- a/.github/test/Ⓜ .md
+++ b/.github/test/Ⓜ .md
@@ -12,3 +12,18 @@
 | Ivry                  | 15, 19, 23, 29, 31, 37, 45, 53, 1h07, 1h11         |
 | Villejuif             | 36, 38, 41, 51, 1h03, 1h15, 1h23, 1h31, 1h39, 1h42 |
 | La Courneuve          | 11, 16, 21, 26, 31, 36, 41, 46, 51, 56             |
+
+| Ⓜ⑧           | 1er train | 2ème train | 14:57 |
+|--------------|-----------|------------|-------|
+| Balard | 1         | 6          | mins  |
+
+| ⑧⑧    ㅤㅤ    | 1er train | 2ème train | 14:57 |
+|---------------|-----------|------------|-------|
+| Créteil     ㅤㅤ | 4         | 9          | mins  |
+| Créteilㅤㅤㅤ | 13        | 26         | mins  |
+
+| Prochain trains pour: | dans (en minutes)                                              |
+|-----------------------|----------------------------------------------------|
+| Créteil                 | 15, 19, 23, 29, 31, 37, 45, 53, 1h07, 1h11         |
+| Créteil          | 36, 38, 41, 51, 1h03, 1h15, 1h23, 1h31, 1h39, 1h42 |
+| Balard          | 11, 16, 21, 26, 31, 36, 41, 46, 51, 56             |
