--- a/.github/test/Ⓜ .md
+++ b/.github/test/Ⓜ .md
@@ -17,7 +17,7 @@
 |--------------|-----------|------------|-------|
 | Balard | 1         | 6          | mins  |
 
-| ⑧⑧    ㅤㅤ    | 1er train | 2ème train | 14:57 |
+| Ⓜ⑧    ㅤㅤ    | 1er train | 2ème train | 14:57 |
 |---------------|-----------|------------|-------|
 | Créteil     ㅤㅤ | 4         | 9          | mins  |
 | Créteilㅤㅤㅤ | 13        | 26         | mins  |
