Direction Ivry, prochain train dans 1 minute. Direction Villejuif, prochain train dans 3 minutes.

--- a/.github/test/Ⓜ .md
+++ b/.github/test/Ⓜ .md
@@ -4,7 +4,7 @@
 
 | Ⓜ❼    ㅤㅤ    | 1er train | 2ème train | 14:57 |
 |---------------|-----------|------------|-------|
-| Ivry     ㅤㅤ | 4         | 9          | mins  |
+| Ivry     ㅤㅤ► | 4         | 9          | mins  |
 | Villejuifㅤㅤㅤ | 13        | 26         | mins  |
 
 | Prochain trains pour: | dans (en minutes)                                              |
