Lozère (École Polytechnique)

--- a/.github/test/Paris Métro Ⓜ/Ⓜ.md
+++ b/.github/test/Paris Métro Ⓜ/Ⓜ.md
@@ -1,6 +1,31 @@
+# Ⓜ❻ Saint-Jacques
+
+Glacière → **Saint-Jacques** → Denfert-Rochereau
+
+| Ⓜ❻      | 1er train | 2ème train | 14:57 |
+|--------|-----------|------------|-------|
+| Étoile | 1         | 4          | min   |
+
+Denfert-Rochereau → **Saint-Jacques** → Glacière
+
+| Ⓜ❻      | 1er train | 2ème train | 14:57 |
+|--------|-----------|------------|-------|
+| Nation | 3         | 8          | min   |
+
+| Prochain trains pour: | dans (en minutes)                                              |
+|-----------------------|----------------------------------------------------|
+| Nation                  | 9, 13, 17, 23, 25, 30, 34, 36, 41, 44         |
+| Étoile            | 12, 15, 21, 24, 28, 34, 36, 39, 45, 51 |
+
+# Ⓜ❼ Censier-Daubenton
+
+Les Gobelins → **Censier-Daubenton** → Place Monge
+
 | Ⓜ❼           | 1er train | 2ème train | 14:57 |
 |--------------|-----------|------------|-------|
 | La Courneuve | 1         | 6          | mins  |
+
+Place Monge → **Censier-Daubenton** → Les Gobelins
 
 | Ⓜ❼    ㅤㅤ    | 1er train | 2ème train | 14:57 |
 |---------------|-----------|------------|-------|
@@ -13,14 +38,20 @@
 | Villejuif             | 36, 38, 41, 51, 1h03, 1h15, 1h23, 1h31, 1h39, 1h42 |
 | La Courneuve          | 11, 16, 21, 26, 31, 36, 41, 46, 51, 56             |
 
+# Ⓜ❽ Bonne Nouvelle
+
+Strasbourg-Saint Denis → **Bonne Nouvelle** → Grands Boulevards
+
 | Ⓜ❽           | 1er train | 2ème train | 14:57 |
 |--------------|-----------|------------|-------|
-| Balard | 1         | 6          | mins  |
+| Balard | 1         | 5          | mins  |
+
+Grands Boulevards → **Bonne Nouvelle** → Strasbourg-Saint Denis
 
 | Ⓜ❽    ㅤㅤ    | 1er train | 2ème train | 14:57 |
 |---------------|-----------|------------|-------|
-| Créteil     ㅤㅤ | 4         | 9          | mins  |
-| Créteilㅤㅤㅤ | 13        | 26         | mins  |
+| Créteil     ㅤㅤ | 3         | 8          | mins  |
+| Créteilㅤㅤㅤ | 9        | 11         | mins  |
 
 | Prochain trains pour: | dans (en minutes)                                              |
 |-----------------------|----------------------------------------------------|
