--- a/.github/test/Paris Métro Ⓜ/Ⓜ.md
+++ b/.github/test/Paris Métro Ⓜ/Ⓜ.md
@@ -50,7 +50,7 @@ Grands Boulevards → **Bonne Nouvelle** → Strasbourg-Saint Denis
 
 | Ⓜ❽    ㅤㅤ    | 1er train | 2ème train | 14:57 |
 |---------------|-----------|------------|-------|
-| Créteil     ►ㅤㅤ | 3         | 8          | mins  |
+| Créteil     ㅤㅤ ►| 3         | 8          | mins  |
 | Créteilㅤㅤㅤ | 9        | 11         | mins  |
 
 | Prochain trains pour: | dans (en minutes)                                              |
